Use jakarta.json instead of javax.json
Signed-off-by: Taylor Smock <tsmock@meta.com>